--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -43,7 +43,7 @@
     "build:pack": "yarn pack -o redwoodjs-api.tgz",
     "build:types": "tsc --build --verbose ./tsconfig.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
-    "check:attw": "yarn attw -P",
+    "check:attw": "yarn rw-fwtools-attw $(pwd)",
     "check:package": "concurrently npm:check:attw yarn:publint",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
@@ -60,7 +60,6 @@
     "title-case": "3.0.3"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "0.15.4",
     "@redwoodjs/framework-tools": "workspace:*",
     "@types/aws-lambda": "8.10.143",
     "@types/jsonwebtoken": "9.0.6",
