--- a/packages/framework-tools/package.json
+++ b/packages/framework-tools/package.json
@@ -20,6 +20,9 @@
     }
   },
   "types": "./dist/buildDefaults.d.ts",
+  "bin": {
+    "rw-fwtools-attw": "./dist/bins/rw-fwtools-attw.js"
+  },
   "files": [
     "dist"
   ],
@@ -28,9 +31,11 @@
     "build:types": "tsc --build --verbose"
   },
   "dependencies": {
+    "@arethetypeswrong/cli": "0.15.4",
     "esbuild": "0.23.0",
     "fast-glob": "3.3.2",
-    "fs-extra": "11.2.0"
+    "fs-extra": "11.2.0",
+    "zx": "8.1.4"
   },
   "devDependencies": {
     "@types/fs-extra": "11.0.4",
