--- a/packages/graphql-server/tsconfig.json
+++ b/packages/graphql-server/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.compilerOption.json",
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist"
+    "outDir": "dist",
+    "module": "Node16",
+    "moduleResolution": "Node16"
   },
   "include": ["ambient.d.ts", "src/**/*"],
   "references": [{ "path": "../api" }, { "path": "../context" }]
