--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -146,6 +146,7 @@
     "@redwoodjs/auth": "workspace:*",
     "@redwoodjs/server-store": "workspace:*",
     "@whatwg-node/fetch": "0.9.20",
+    "apollo-upload-client": "18.0.1",
     "core-js": "3.38.0",
     "graphql": "16.9.0",
     "graphql-sse": "2.5.3",
@@ -167,6 +168,7 @@
     "@rollup/plugin-babel": "6.0.4",
     "@testing-library/jest-dom": "6.4.8",
     "@testing-library/react": "14.3.1",
+    "@types/apollo-upload-client": "^18",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "concurrently": "8.2.2",
