Fix types for resultExtension

--- a/packages/uploads/tsconfig.json
+++ b/packages/uploads/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "dist"
   },
   "include": ["src", "prisma-override.d.ts"],
-
+  "exclude": ["dist", "node_modules", "**/__mocks__"],
   "references": [
     {
       "path": "../project-config"
