--- a/packages/framework-tools/package.json
+++ b/packages/framework-tools/package.json
@@ -17,6 +17,10 @@
     "./cjsTypes": {
       "types": "./dist/cjsTypes.d.ts",
       "default": "./dist/cjsTypes.js"
+    },
+    "./generateTypes": {
+      "types": "./dist/generateTypes.d.ts",
+      "default": "./dist/generateTypes.js"
     }
   },
   "types": "./dist/buildDefaults.d.ts",
@@ -40,6 +44,7 @@
   "devDependencies": {
     "@types/fs-extra": "11.0.4",
     "tsx": "4.17.0",
+    "type-fest": "4.24.0",
     "typescript": "5.5.4"
   },
   "gitHead": "3905ed045508b861b495f8d5630d76c7a157d8f1"
