--- a/packages/auth-providers/dbAuth/middleware/tsconfig.json
+++ b/packages/auth-providers/dbAuth/middleware/tsconfig.json
@@ -4,8 +4,9 @@
     "strict": true,
     "rootDir": "src",
     "outDir": "dist",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "references": [
