--- a/packages/auth-providers/supabase/middleware/tsconfig.cjs.json
+++ b/packages/auth-providers/supabase/middleware/tsconfig.cjs.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
-    "tsBuildInfoFile": "./tsconfig.types-cjs.tsbuildinfo"
+    "tsBuildInfoFile": "./tsconfig.cjs.tsbuildinfo"
   }
 }
