--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -77,10 +77,10 @@
     "skip-nav.css"
   ],
   "scripts": {
-    "build": "tsx ./build.ts && yarn build:types",
+    "build": "tsx ./build.ts",
     "build:pack": "yarn pack -o redwoodjs-router.tgz",
     "build:types": "tsc --build --verbose tsconfig.build.json",
-    "build:types-cjs": "tsc --build --verbose tsconfig.types-cjs.json",
+    "build:types-cjs": "tsc --build --verbose tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "check:attw": "tsx ./attw.ts",
     "check:package": "concurrently npm:check:attw yarn publint",
