--- a/packages/router/tsconfig.build.json
+++ b/packages/router/tsconfig.build.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext"
+    "module": "Node16",
+    "moduleResolution": "Node16",
+    "tsBuildInfoFile": "./tsconfig.build.tsbuildinfo"
   },
   "include": ["src", "./ambient.d.ts", "./rsdw.modules.d.ts"],
   "references": [
