--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext"
+    "moduleResolution": "Node16",
+    "module": "Node16",
+    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
   "include": ["src/**/*"],
   "references": [
     { "path": "../babel-config" },
     { "path": "../cli-helpers" },
-    { "path": "../project-config" },
+    { "path": "../project-config" }
   ]
 }
