Add comment about queues to setup template

--- a/packages/cli/src/commands/setup/jobs/templates/jobs.ts.template
+++ b/packages/cli/src/commands/setup/jobs/templates/jobs.ts.template
@@ -17,7 +17,7 @@ export const jobs = new JobManager({
     {
       adapter: 'prisma',
       logger,
-      queue: '*',
+      queue: '*', // watch all queues
       count: 1,
       maxAttempts: 24,
       maxRuntime: 14_400,
