--- a/packages/auth-providers/supabase/middleware/tsconfig.build.json
+++ b/packages/auth-providers/supabase/middleware/tsconfig.build.json
@@ -2,12 +2,13 @@
   "extends": "../../../../tsconfig.compilerOption.json",
   "compilerOptions": {
     "strict": true,
+    "rootDir": "src",
     "outDir": "dist",
     "module": "Node16",
-    "moduleResolution": "Node16"
+    "moduleResolution": "Node16",
+    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
   },
-  "include": ["."],
-  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__fixtures__"],
+  "include": ["src/**/*"],
   "references": [
     { "path": "../../../auth/tsconfig.build.json" },
     { "path": "../../../vite/tsconfig.build.json" }
