--- a/packages/auth-providers/supabase/middleware/tsconfig.json
+++ b/packages/auth-providers/supabase/middleware/tsconfig.json
@@ -2,13 +2,12 @@
   "extends": "../../../../tsconfig.compilerOption.json",
   "compilerOptions": {
     "strict": true,
-    "rootDir": "src",
     "outDir": "dist",
     "module": "Node16",
-    "moduleResolution": "Node16",
-    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
+    "moduleResolution": "Node16"
   },
-  "include": ["src/**/*"],
+  "include": ["."],
+  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__fixtures__"],
   "references": [
     { "path": "../../../auth/tsconfig.build.json" },
     { "path": "../../../vite/tsconfig.build.json" }
