--- a/packages/context/tsconfig.json
+++ b/packages/context/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.compilerOption.json",
   "compilerOptions": {
-    "rootDir": "src",
     "outDir": "dist",
     "module": "Node16",
-    "moduleResolution": "Node16",
-    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
+    "moduleResolution": "Node16"
   },
-  "include": ["src"]
+  "include": ["."],
+  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__fixtures__"],
+  "references": [{ "path": "../framework-tools" }]
 }
