--- a/packages/context/tsconfig.build.json
+++ b/packages/context/tsconfig.build.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "module": "Node16",
     "moduleResolution": "Node16",
-    "tsBuildInfoFile": "./tsconfig.tsbuildinfo"
+    "tsBuildInfoFile": "./tsconfig.build.tsbuildinfo"
   },
   "include": ["src"]
 }
