--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -47,7 +47,7 @@
   "scripts": {
     "build": "tsx ./build.ts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-cli-helpers.tgz",
-    "build:types": "tsc --build --verbose ./tsconfig.build.json ./tsconfig.build.cjs.json",
+    "build:types": "tsc --build --verbose ./tsconfig.build.json ./tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
