--- a/packages/project-config/package.json
+++ b/packages/project-config/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "tsx ./build.ts && run build:types",
     "build:pack": "yarn pack -o redwoodjs-project-config.tgz",
-    "build:types": "tsc --build --verbose ./tsconfig.json ./tsconfig.types-cjs.json",
+    "build:types": "tsc --build --verbose ./tsconfig.json ./tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "check:attw": "yarn attw -P",
     "check:package": "concurrently npm:check:attw yarn:publint",
