--- a/packages/project-config/tsconfig.cjs.json
+++ b/packages/project-config/tsconfig.cjs.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "dist/cjs",
-    "tsBuildInfoFile": "tsconfig.types-cjs.tsbuildinfo",
+    "tsBuildInfoFile": "./tsconfig.cjs.tsbuildinfo",
     "module": "commonjs",
     "moduleResolution": "node"
   }
