--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -33,7 +33,7 @@
   "scripts": {
     "build": "tsx ./build.mts",
     "build:pack": "yarn pack -o redwoodjs-jobs.tgz",
-    "build:types": "tsc --build --verbose ./tsconfig.json",
+    "build:types": "tsc --build --verbose ./tsconfig.build.json",
     "build:types-cjs": "tsc --build --verbose ./tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "check:attw": "yarn rw-fwtools-attw",
@@ -42,10 +42,13 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
+  "dependencies": {
+    "@redwoodjs/cli-helpers": "workspace:*",
+    "@redwoodjs/project-config": "workspace:*"
+  },
   "devDependencies": {
     "@prisma/client": "5.18.0",
     "@redwoodjs/framework-tools": "workspace:*",
-    "@redwoodjs/project-config": "workspace:*",
     "concurrently": "8.2.2",
     "publint": "0.2.10",
     "tsx": "4.17.0",
