fix __dirname and cjs typegen issue

--- a/packages/jobs/tsconfig.cjs.json
+++ b/packages/jobs/tsconfig.cjs.json
@@ -3,5 +3,13 @@
   "compilerOptions": {
     "outDir": "dist/cjs",
     "tsBuildInfoFile": "./tsconfig.cjs.tsbuildinfo"
-  }
+  },
+  "exclude": [
+    "dist",
+    "node_modules",
+    "**/__tests__",
+    "**/__mocks__",
+    "**/*.test.*",
+    "./src/bins/**/*"
+  ]
 }
