--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -8,7 +8,7 @@
   "include": ["src", "./testUtils.d.ts"],
   "exclude": ["**/__testfixtures__"],
   "references": [
-    { "path": "../api-server" },
+    { "path": "../api-server/tsconfig.build.json" },
     { "path": "../cli-helpers" },
     { "path": "../internal" },
     { "path": "../prerender" },
