--- a/packages/api-server/tsconfig.json
+++ b/packages/api-server/tsconfig.json
@@ -1,12 +1,11 @@
 {
   "extends": "../../tsconfig.compilerOption.json",
   "compilerOptions": {
-    "rootDir": "src",
-    "outDir": "dist",
+    "isolatedModules": true,
     "emitDeclarationOnly": false,
     "noEmit": true
   },
-  "include": ["src", "ambient.d.ts"],
+  "include": ["."],
   "references": [
     { "path": "../internal" },
     { "path": "../project-config" },
