--- a/packages/auth-providers/auth0/web/package.json
+++ b/packages/auth-providers/auth0/web/package.json
@@ -7,32 +7,58 @@
     "directory": "packages/auth-providers/auth0/web"
   },
   "license": "MIT",
-  "main": "./dist/index.js",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "default": {
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
+      }
+    },
+    "./dist/auth0": {
+      "import": {
+        "types": "./dist/auth0.d.ts",
+        "default": "./dist/auth0.js"
+      },
+      "default": {
+        "types": "./dist/cjs/auth0.d.ts",
+        "default": "./dist/cjs/auth0.js"
+      }
+    }
+  },
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "yarn build:js && yarn build:types",
-    "build:js": "babel src -d dist --extensions \".js,.jsx,.ts,.tsx\" --copy-files --no-copy-ignored",
+    "build": "tsx ./build.ts",
     "build:pack": "yarn pack -o redwoodjs-auth-auth0-web.tgz",
-    "build:types": "tsc --build --verbose",
+    "build:types": "tsc --build --verbose ./tsconfig.build.json",
+    "build:types-cjs": "tsc --build --verbose ./tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx,template\" --ignore dist --exec \"yarn build\"",
+    "check:attw": "yarn rw-fwtools-attw",
+    "check:package": "concurrently npm:check:attw yarn:publint",
     "prepublishOnly": "NODE_ENV=production yarn build",
     "test": "vitest run",
     "test:watch": "vitest watch"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "7.25.0",
-    "@redwoodjs/auth": "workspace:*",
-    "core-js": "3.38.0"
+    "@redwoodjs/auth": "workspace:*"
   },
   "devDependencies": {
     "@auth0/auth0-spa-js": "2.1.3",
-    "@babel/cli": "7.24.8",
-    "@babel/core": "^7.22.20",
+    "@redwoodjs/framework-tools": "workspace:*",
     "@types/react": "^18.2.55",
+    "concurrently": "8.2.2",
+    "publint": "0.2.10",
     "react": "19.0.0-rc-8269d55d-20240802",
+    "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
   },
