--- a/packages/prerender/tsconfig.build.json
+++ b/packages/prerender/tsconfig.build.json
@@ -1,11 +1,11 @@
 {
   "extends": "../../tsconfig.compilerOption.json",
   "compilerOptions": {
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "rootDir": "src",
+    "outDir": "dist",
     "allowJs": true
   },
-  "include": ["."],
+  "include": ["./src/**/*", "ambient.d.ts"],
   "references": [
     { "path": "../babel-config" },
     { "path": "../project-config" },
@@ -13,6 +13,5 @@
     { "path": "../structure" },
     { "path": "../web/tsconfig.build.json" },
     { "path": "../framework-tools" }
-  ],
-  "exclude": ["dist", "node_modules", "**/__mocks__", "**/__tests__/fixtures"]
+  ]
 }
