--- a/packages/graphql-server/tsconfig.json
+++ b/packages/graphql-server/tsconfig.json
@@ -9,6 +9,7 @@
   "include": ["ambient.d.ts", "src/**/*"],
   "references": [
     { "path": "../api" },
-    { "path": "../context/tsconfig.build.json" }
+    { "path": "../context/tsconfig.build.json" },
+    { "path": "../realtime" }
   ]
 }
