--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -11,13 +11,13 @@
   "exports": {
     ".": {
       "default": {
-        "types": "./dist/cjs/index.d.ts",
-        "default": "./dist/cjs/index.js"
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
       }
     },
     "./package.json": "./package.json"
   },
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
     "rw-jobs": "./dist/bins/rw-jobs.js",
