--- a/packages/cli-helpers/package.json
+++ b/packages/cli-helpers/package.json
@@ -69,7 +69,8 @@
     "prompts": "2.4.2",
     "semver": "7.6.3",
     "smol-toml": "1.3.0",
-    "terminal-link": "2.1.1"
+    "terminal-link": "2.1.1",
+    "yargs-parser": "21.1.1"
   },
   "devDependencies": {
     "@redwoodjs/framework-tools": "workspace:*",
@@ -78,6 +79,7 @@
     "@types/pascalcase": "1.0.3",
     "@types/semver": "^7",
     "@types/yargs": "17.0.33",
+    "@types/yargs-parser": "21.0.3",
     "tsx": "4.17.0",
     "typescript": "5.5.4",
     "vitest": "2.0.5"
