fix(jobs): Include bin proxies and only build to cjs (#11344)
The jobs bins where not being picked up when you ran jobs from within a
user project. I have followed our existing approach of adding bin
proxies to the core package. I think we should look to revisit this
general approach in the future but not right now.

I also ran into issues with cjs/esm compatibility for the bins. We need
to build them to cjs as they end up required by another cjs file. For
now I have switched the jobs package to build only to cjs and we can
switch to hybrid or esm only in the future. I would prefer to get this
fix in now so that the feature is fixed and then we can enhance how we
build things.

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -7,21 +7,17 @@
     "directory": "packages/jobs"
   },
   "license": "MIT",
-  "type": "module",
+  "type": "commonjs",
   "exports": {
     ".": {
-      "import": {
+      "default": {
         "types": "./dist/index.d.ts",
         "default": "./dist/index.js"
-      },
-      "default": {
-        "types": "./dist/cjs/index.d.ts",
-        "default": "./dist/cjs/index.js"
       }
-    }
+    },
+    "./package.json": "./package.json"
   },
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/index.js",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
     "rw-jobs": "./dist/bins/rw-jobs.js",
@@ -31,10 +27,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsx ./build.ts",
+    "build": "tsx ./build.mts && yarn build:types",
     "build:pack": "yarn pack -o redwoodjs-jobs.tgz",
     "build:types": "tsc --build --verbose ./tsconfig.build.json",
-    "build:types-cjs": "tsc --build --verbose ./tsconfig.cjs.json",
     "build:watch": "nodemon --watch src --ext \"js,jsx,ts,tsx\" --ignore dist --exec \"yarn build\"",
     "check:attw": "yarn rw-fwtools-attw",
     "check:package": "concurrently npm:check:attw yarn:publint",
