--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "project:copy": "node ./tasks/framework-tools/frameworkFilesToProject.mjs",
     "project:deps": "node ./tasks/framework-tools/frameworkDepsToProject.mjs",
     "project:sync": "node ./tasks/framework-tools/frameworkSyncToProject.mjs",
-    "project:tarsync": "node ./tasks/framework-tools/tarsync.mjs",
+    "project:tarsync": "tsx ./tasks/framework-tools/tarsync/bin.mts",
     "rebuild-fragments-test-project-fixture": "tsx ./tasks/test-project/rebuild-fragments-test-project-fixture.ts",
     "rebuild-test-project-fixture": "tsx ./tasks/test-project/rebuild-test-project-fixture.ts",
     "smoke-tests": "node ./tasks/smoke-tests/smoke-tests.mjs",
