--- a/packages/create-redwood-app/templates/ts/scripts/tsconfig.json
+++ b/packages/create-redwood-app/templates/ts/scripts/tsconfig.json
@@ -7,26 +7,14 @@
     "module": "esnext",
     "moduleResolution": "node",
     "paths": {
-      "$api/*": [
-        "../api/*"
-      ],
-      "api/*": [
-        "../api/*"
-      ],
-      "$web/*": [
-        "../web/*"
-      ],
-      "web/*": [
-        "../web/*"
-      ],
-      "$web/src/*": [
-        "../web/src/*",
-        "../.redwood/types/mirror/web/src/*"
-      ],
-      "web/src/*": [
-        "../web/src/*",
-        "../.redwood/types/mirror/web/src/*"
-      ],
+      "$api/*": ["../api/*"],
+      "api/*": ["../api/*"],
+      "$api/src/*": ["../api/src/*", "../.redwood/types/mirror/api/src/*"],
+      "api/src/*": ["../api/src/*", "../.redwood/types/mirror/api/src/*"],
+      "$web/*": ["../web/*"],
+      "web/*": ["../web/*"],
+      "$web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
+      "web/src/*": ["../web/src/*", "../.redwood/types/mirror/web/src/*"],
       "types/*": ["../types/*", "../web/types/*", "../api/types/*"]
     },
     "typeRoots": ["../node_modules/@types"],
