fix(template): api type declaration merging for scripts

--- a/packages/create-redwood-app/templates/ts/scripts/tsconfig.json
+++ b/packages/create-redwood-app/templates/ts/scripts/tsconfig.json
@@ -13,6 +13,14 @@
       "api/*": [
         "../api/*"
       ],
+      "$api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
+      "api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
       "$web/*": [
         "../web/*"
       ],
