--- a/packages/create-redwood-app/templates/js/scripts/jsconfig.json
+++ b/packages/create-redwood-app/templates/js/scripts/jsconfig.json
@@ -15,6 +15,14 @@
       "$web/*": [
         "../web/*"
       ],
+      "$api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
+      "api/src/*": [
+        "../api/src/*",
+        "../.redwood/types/mirror/api/src/*"
+      ],
       "web/*": [
         "../web/*"
       ],
