fix(template): web/ tsconfig module "ESNext"

--- a/packages/create-redwood-app/templates/js/web/jsconfig.json
+++ b/packages/create-redwood-app/templates/js/web/jsconfig.json
@@ -3,7 +3,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "target": "ES2022",
-    "module": "ES2022",
+    "module": "ESNext",
     "moduleResolution": "Bundler",
     "skipLibCheck": false,
     "rootDirs": [
