--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -108,6 +108,7 @@
     "@types/yargs-parser": "21.0.3",
     "concurrently": "8.2.2",
     "glob": "11.0.0",
+    "memfs": "4.11.1",
     "publint": "0.2.10",
     "rollup": "4.20.0",
     "tsx": "4.17.0",
