--- a/packages/storybook/package.json
+++ b/packages/storybook/package.json
@@ -62,7 +62,7 @@
     "@types/node": "20.14.12",
     "tsx": "4.16.2",
     "typescript": "5.5.4",
-    "vite": "5.3.5"
+    "vite": "6.0.0-alpha.21"
   },
   "peerDependencies": {
     "@redwoodjs/project-config": "workspace:*",
