--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -90,7 +90,7 @@
     "react": "19.0.0-beta-04b058868c-20240508",
     "react-server-dom-webpack": "19.0.0-beta-04b058868c-20240508",
     "rimraf": "6.0.1",
-    "vite": "5.3.5",
+    "vite": "6.0.0-alpha.21",
     "vite-plugin-cjs-interop": "2.1.1",
     "vite-plugin-node-polyfills": "0.22.0",
     "ws": "8.18.0",
