--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -63,6 +63,7 @@
     "@babel/generator": "7.25.0",
     "@babel/parser": "^7.22.16",
     "@babel/traverse": "^7.22.20",
+    "@hattip/adapter-node": "0.0.47",
     "@redwoodjs/auth": "workspace:*",
     "@redwoodjs/babel-config": "workspace:*",
     "@redwoodjs/cookie-jar": "workspace:*",
@@ -90,6 +91,7 @@
     "react": "19.0.0-rc-8269d55d-20240802",
     "react-server-dom-webpack": "19.0.0-rc-8269d55d-20240802",
     "rimraf": "6.0.1",
+    "rsc-html-stream": "0.0.3",
     "vite": "6.0.0-alpha.21",
     "vite-plugin-cjs-interop": "2.1.1",
     "vite-plugin-node-polyfills": "0.22.0",
