--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -82,6 +82,7 @@
     "cookie": "0.6.0",
     "core-js": "3.38.0",
     "dotenv-defaults": "5.0.2",
+    "es-module-lexer": "1.5.4",
     "execa": "5.1.1",
     "express": "4.19.2",
     "find-my-way": "8.2.0",
