--- a/packages/jobs/tsconfig.json
+++ b/packages/jobs/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "../../tsconfig.compilerOption.json",
   "compilerOptions": {
     "moduleResolution": "Node16",
-    "module": "Node16"
+    "module": "Node16",
+    "emitDeclarationOnly": false,
+    "noEmit": true
   },
   "include": ["."],
   "exclude": ["dist", "node_modules", "**/__mocks__", "**/__tests__/fixtures"],
