--- a/packages/vite/package.json
+++ b/packages/vite/package.json
@@ -89,6 +89,7 @@
     "fs-extra": "11.2.0",
     "http-proxy-middleware": "3.0.0",
     "isbot": "5.1.16",
+    "lodash": "4.17.21",
     "react": "19.0.0-rc-8269d55d-20240802",
     "react-server-dom-webpack": "19.0.0-rc-8269d55d-20240802",
     "rimraf": "6.0.1",
