--- a/.github/workflows/check-create-redwood-app.yml
+++ b/.github/workflows/check-create-redwood-app.yml
@@ -10,6 +10,8 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+permissions: {}
+
 jobs:
   check-create-redwood-app:
     name: Check create redwood app
