--- a/packages/cli/src/commands/generate/page/templates/page.tsx.template
+++ b/packages/cli/src/commands/generate/page/templates/page.tsx.template
@@ -23,8 +23,7 @@ const ${pascalName}Page = (<%- paramName === '' ? '' : `${propParam}: ${pascalNa
       </p>
       {/*
           My default route is named <code>${camelName}</code>, link to me with `
-          <Link to={routes.${camelName}(${ argumentParam })}>${pascalName}<%= argumentParam !== '' ? ' 42' : '' %></Link>`
-          <% if (paramName !== '') { %>
+          <Link to={routes.${camelName}(${ argumentParam })}>${pascalName}<%= argumentParam !== '' ? ' 42' : '' %></Link>`<% if (paramName !== '') { %>
           The parameter passed to me is {${ paramName }}<% } %>
       */}
     </>
